--- a/core/gui/index.html
+++ b/core/gui/index.html
@@ -1,8 +1,11 @@
 <head>
 
 	@resources {
-		ls-js: tiny;
-		ls-css: base, ls-flat;
+		ls-version: 5.0.0;
+		ls-channel: prod;
+		ls-js;
+		ls-css: flat;
+
 		fonts: "Poppins";
 		bootstrap-icons;
 	}
@@ -11,26 +14,37 @@
 		title: "Akeno Dashboard";
 		style: flat;
 		theme: dark;
+		accent: rusty-red;
 	}
 
 </head>
 
 <body>
 
-	<button .pill onclick="list()"><i .bi-arrow-clockwise></i> Refresh</button>
-	<div %list></div>
+	<ls-div>
+		<ls-box #status></ls-box>
+	</ls-div>
+
+	<br>
+
+	<ls-div>
+		<button .pill onclick="list()"><i .bi-arrow-clockwise></i> Refresh</button>
+		
+		<ls-div>
+			<div #list></div>
+		</ls-div>
+	</ls-div>
 
 	<script>
-		let app = {
-
-		}
-
-		let api = "http://0.0.0.0/___internal/"
+		let app = {}
+		let api = location.origin + "/api/";
 
 		async function list() {
-			O("#list").getAll().all().remove()
+			for(let child of [...O("#list").children]) child.remove();
 
-			app.appList = await (await fetch(api + "list")).json()
+			app.appList = await (await fetch(api + "web.list")).json()
+
+			O("#list").add(N("h3", app.appList.length + " applications"))
 
 			for (let application of app.appList) {
 				O("#list").add(N("ls-box", {
@@ -46,22 +60,73 @@
 							type: "checkbox",
 							checked: application.enabled,
 							async onchange(){
-								await fetch(`${api}${this.checked? "enable": "disable"}?app=${application.path}`)
+								await fetch(`${api}web.${this.checked? "enable": "disable"}/?${application.path}`)
 							}
 						}), "Enabled", N("span")]}),
 
 						N("br"),
 						N("br"),
-						
-						N("b", "Domains:"),
-						N("br"),
-						N("span", {inner: application.domains.map(link => `<a href="http://${link}" target="_blank">${link}</a>`).join("\n")}),
+
+						...application.domains.length? [
+							N("b", "Domains:"),
+							N("br"),
+							N("span", {inner: application.domains.map(link => `<a href="http://${link}" target="_blank">${link}</a>`).join("\n")}),
+						]: [],
+
+						...application.ports.length? [
+							N("b", "Ports:"),
+							N("br"),
+							N("span", {inner: application.ports.map(port => `<a href="http://${location.hostname}:${port}" target="_blank">${port}</a>`).join("\n")}),
+						]: [],
 					]
 				}))
 			}
 		}
 
+		function formatUptime(seconds) {
+			const hours = Math.floor(seconds / 3600);
+			const minutes = Math.floor((seconds % 3600) / 60);
+			const remainingSeconds = Math.floor(seconds % 60);
+			
+			return `${hours}h ${minutes}m ${remainingSeconds}s`;
+		}
 
+		async function status(){
+			app.status = await (await fetch(api + "usage/cpu")).json()
+
+			O("#status").set([
+				N("h2", {innerText: "Akeno v" + app.status.version}),
+				N("h3", "System Status"),
+				N("h4", "CPU Usage: " + app.status.cpu.usage.toFixed(4) + "%"),
+				N("h4", "Memory Usage: " + (app.status.mem.heapUsed / 1000000).toFixed(2) + "MB"),
+				N("h4", "Uptime: " + formatUptime(app.status.uptime)),
+
+				// N("br"),
+				// N("br"),
+
+				// N("b", "Memory Usage:"),
+				// N("br"),
+				// N("progress", {value: app.status.memory, max: 100, innerText: app.status.memory + "%"}),
+
+				// N("br"),
+				// N("br"),
+
+				// N("b", "Disk Usage:"),
+				// N("br"),
+				// N("progress", {value: app.status.disk, max: 100, innerText: app.status.disk + "%"}),
+
+				// N("br"),
+				// N("br"),
+
+				// N("b", "Uptime:"),
+				// N("br"),
+				// N("span", {innerText: app.status.uptime}),
+			])
+		}
+
+		LS.Color.autoScheme()
+
+		status()
 		list()
 	</script>
 
@@ -70,12 +135,18 @@
 			font-family: Poppins;
 		}
 
-		h1, h2, h3 {
+		body {
+			padding: 32px;
+		}
+
+		h1, h2, h3, h4 {
 			margin: 0;
 		}
 
 		.app {
 			white-space: pre-wrap;
+			margin: 1em 0;
+			background: var(--elevate-2);
 		}
 
 		.app-path {
