--- a/examples/hello-world-website/index.html
+++ b/examples/hello-world-website/index.html
@@ -1,6 +1,7 @@
 <head>
 
-    @use (bootstrap-icons:1.11.3, ls.css:5.0.0, google-fonts[Poppins]);
+    <!-- @use (bootstrap-icons:1.11.3, ls.css:5.0.0, google-fonts[Poppins]); -->
+    @use (bootstrap-icons:1.11.3, /assets/style.css, google-fonts[Poppins]);
 
     @page {
         title: "Hello world!";
@@ -10,9 +11,11 @@
         font: Poppins;
     }
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
-<body>
+<body ls>
     <div #id .class>
         <h1>Hello world! <i .bi-stars /></h1>
     </div>
@@ -20,6 +23,11 @@
     <style>
         body {
             padding: 0 1rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
+            inset: 0;
         }
     </style>
 </body>
