--- a/examples/hello-world-website/index.html
+++ b/examples/hello-world-website/index.html
@@ -1,6 +1,5 @@
 <head>
 
-    <!-- @use (bootstrap-icons:1.11.3, ls.css:5.0.0, google-fonts[Poppins]); -->
     @use (bootstrap-icons:1.11.3, /assets/style.css, google-fonts[Poppins]);
 
     @page {
@@ -11,23 +10,10 @@
         font: Poppins;
     }
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
 
-<body ls>
+<body>
     <div #id .class>
         <h1>Hello world! <i .bi-stars /></h1>
     </div>
-
-    <style>
-        body {
-            padding: 0 1rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: fixed;
-            inset: 0;
-        }
-    </style>
 </body>
